Make log viewer usable in multiple instances

Also kills the "KDEInit couldn't launch log viewer" error and Plasma
being blocked issue

REVIEW: 123907
BUG: 346395
FIXED-IN: 15.04.2